syntax = "proto3";
package qa.loadtesting.alilo.backend.v1;

option go_package = "github.com/aliexpressru/alilo-backend/pkg/pb/qa/loadtesting/alilo/backend/v1";


import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "qa/loadtesting/alilo/backend/v1/models.proto";
import "qa/loadtesting/alilo/backend/v1/command_messages.proto";


// hint: checkout protobuf style guide https://developers.google.com/protocol-buffers/docs/style
service CommandService {
  // CommandNew - Create command for command_processor
  rpc CommandNew(.qa.loadtesting.alilo.backend.v1.CommandNewRequest) returns (.qa.loadtesting.alilo.backend.v1.CommandNewResponse) {
    option (google.api.http) = {
      post: "/v1/command/new"
      body: "*"
    };
  }
}

